--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
             <li><a href="#who">Who</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-
     </nav>
+
+    <!-- Header: Showcase -->
+    <header id="showcase">
+        <div class="showcase-content">
+            <h1 class="l-heading">
+                The Sky is the Limit
+            </h1>
+            <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum sunt voluptas adipisci repellendus provident eius?
+            </p>
+            <a href="#what" class="btn">Read More</a>
+        </div>
+    </header>
 </body>
 </html>
