--- a/index.html
+++ b/index.html
@@ -68,5 +68,39 @@
             </div>
         </div>
     </section>
+
+    <!-- Section: Who We Are -->
+    <section id="who">
+        <div class="who-img"></div>
+
+        <div class="who-text bg-dark p-2">
+            <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eum officia non, mollitia recusandae praesentium voluptates iusto perspiciatis harum fugit repudiandae iure sit voluptatem esse impedit molestiae quia. Assumenda, ea?</p>
+            <h3>Our Team</h3>
+            <ul class="list">
+                <li>JJ Abrams, CEO</li>
+                <li>Daisy Ridley, CFO</li>
+                <li>John Boyega, Lead Accountant</li>
+                <li>Oscar Issac, Investment Manager</li>
+                <li>Ian McDiarmid, Senior Accountant</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Section: Clients -->
+    <section id="clients" class="py-1">
+        <div class="container">
+            <h2 class="m-heading text-center">
+                <span class="text-primary">Our</span> Clients
+            </h2>
+            <div class="items py-1">
+                <div><img src="./img/logos/logo1.png" alt="Client"></div>
+                <div><img src="./img/logos/logo2.png" alt="Client"></div>
+                <div><img src="./img/logos/logo3.png" alt="Client"></div>
+                <div><img src="./img/logos/logo4.png" alt="Client"></div>
+                <div><img src="./img/logos/logo5.png" alt="Client"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
